--- a/games/files/spelunky/assets/locale/locales.json
+++ b/games/files/spelunky/assets/locale/locales.json
@@ -2,6 +2,8 @@
     "en": "ENGLISH",
     "eo": "ESPERANTO",
     "es": "ESPAÑOL",
+    "fr": "FRANÇAIS",
     "pt_br": "PORTUGUÊS BRASILEIRO",
-    "ru": "РУССКИЙ"
+    "ru": "РУССКИЙ",
+    "uk": "УКРАЇНСЬКА"
 }
